# physics-functional-programming

./: .gitignore  1.hs  10.hs  11.hs  2.hs  3.hs  4.hs  5.hs  6.hs  7.hs  9.hs  README.md  aaa.hs
12/: 12.hs  SimpleVec.hs
12/Trajectory/: CHANGELOG.md  Trajectory.cabal  package.yaml
12/Trajectory/app/: MakeTrajectoryGraph.hs
12/Trajectory/src/: SimpleVec.hs
13/: 2D.hs
13/Animations/: .gitignore  Animations.cabal  CHANGELOG.md  README.md  package.yaml  stack.yaml
13/Animations/app/: Main.hs
13/Animations/app/BlueCube/: Main.hs
13/Animations/app/CoordinateSystem/: Main.hs
13/Animations/app/DiskAndCircle/: Main.hs
13/Animations/app/Lines/: Main.hs
13/Animations/app/Projectile/: Main.hs
13/Animations/app/RotatingCoordinates/: Main.hs
13/Animations/app/RotatingCube/: Main.hs
13/Animations/app/SimpleDisk/: Main.hs
13/Animations/app/ThreeDSimulation/: Main.hs
13/Animations/src/ThreeDPictures/: BlueCube.hs  CoordinateSystem.hs
13/Animations/src/TwoDAnimations/: Projectile.hs  SimpleDisk.hs
13/Animations/src/TwoDPictures/: DiskAndCircle.hs  Lines.hs
learnPhysicsWithFunctionalProgramming.hsproj/: .uuid
learnPhysicsWithFunctionalProgramming.hsproj/learnPhysicsWithFunctionalProgramming/: Chapter1.hs  Chapter10.hs  Chapter11.hs  Chapter12.hs  Chapter2.hs  Chapter3.hs  Chapter4.hs  Chapter5.hs  Chapter6.hs  Chapter7.hs  Chapter9.hs  Hello.hs  _Chapter1.hsplay  _Chapter3.hsplay  _Chapter4.hsplay  _Chapter5.hsplay  learnPhysicsWithFunctionalProgramming.cabal
