cabal-version: 2.4
name: learnPhysicsWithFunctionalProgramming
version: 1.0
stability: experimental
x-ghc-framework-version: 8.6.4-13.14-3
x-last-ide-version: HfM1.8.2

executable learnPhysicsWithFunctionalProgramming
    main-is: Main.hs
    other-modules:
        Chapter3
        Chapter10
        SimpleVec
        Chapter9
        Chapter7
        Hello
        Chapter6
        Chapter11
        Chapter2
        Chapter4
        Chapter1
        Chapter5
        Chapter12
    default-language: Haskell2010
    build-depends:
        base -any
